src/main/default/objects/Price_Book__c/Price_Book__c.object-meta.xml
<CustomObject>
    <description>Items from the catalog are priced zero or one time in zero or more price books.</description>
    <label>Price Book</label>
    <nameField>
        <label>Price Book Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ii00000005Z90EAE_00Ni0000001Yv2dEAC</fullName>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND (3 OR 4) AND (5 OR 6)</booleanFilter>
        <errorMessage>The Price Book does not match the Job information. Check the Account, Segment and Office on the Price Book.</errorMessage>
        <field>Job__c.Price_Book__c</field>
        <filterItems>
            <field>$Source.CustomerAccount__c</field>
            <operation>equals</operation>
            <valueField>Price_Book__c.Account__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Price_Book__c.Account__r.Id</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>$Source.Office__c</field>
            <operation>equals</operation>
            <valueField>Price_Book__c.Office__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Price_Book__c.Office__r.Id</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>$Source.Segment__c</field>
            <operation>equals</operation>
            <valueField>Price_Book__c.Segment__c</valueField>
        </filterItems>
        <filterItems>
            <field>Price_Book__c.Segment__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <infoMessage>When selecting a Price Book to use for this job, the system restricts your selections to only Price Books where the Price Book's office, segment and customer match those of this Job or where the respective price book's attribute is null.</infoMessage>
        <isOptional>false</isOptional>
        <name>Job_Price Book</name>
        <sourceObject>Job__c</sourceObject>
    </namedFilters>
    <pluralLabel>Price Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>