src/main/default/objects/Price_Book__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer that uses the price book. If a customer is not selected, the price book is available for every customer.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>