src/main/default/objects/Price_Book__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer that uses the price book. If a customer is not selected, the price book is available for every customer.</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>