src/main/default/objects/Price_Book__c/fields/AddTktItemsByPBSeqNum__c.field-meta.xml
<CustomField>
    <fullName>AddTktItemsByPBSeqNum__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, price book items, when added to a ticket, should honor the sequence number.  Otherwise they will be inserted at the end of the ticket.</description>
    <inlineHelpText>Controls whether users can change sequence numbers for price book items to adjust the order of item lists. If selected, users cannot change sequence numbers. If deselected, users can change sequence numbers and new items get added at the end of a list.</inlineHelpText>
    <label>Honor Sequence Number</label>
    <type>Checkbox</type>
</CustomField>