src/main/default/objects/Price_Book__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date from which users can select the price book for jobs.</inlineHelpText>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>