src/main/default/objects/Price_Book__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Last date that users can select the price book for jobs. You cannot select the price book for a job after this date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>