src/main/default/objects/Price_Book__c/fields/Global_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Global_Price_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Price Book is global. Global price books will sync to all Mobile users.</description>
    <inlineHelpText>If selected, the price book is available for every customer, office, and business segment. This setting overrides any selection made in the "Account", "Office", and "Segment" fields.</inlineHelpText>
    <label>Global Price Book</label>
    <type>Checkbox</type>
</CustomField>