src/main/default/objects/Price_Book__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>IF(!IsArchived__c &amp;&amp; Effective_Date__c &lt;=TODAY() &amp;&amp; (ISNULL(Expiration_Date__c) || (Expiration_Date__c >=TODAY())) &amp;&amp; (ISBLANK(Account__c) || !Account__r.IsArchived__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether users can select the price book for a job. Users cannot select a price book for a job if the current date is before the "Effective Date", the current date is after the "Expiration Date", or "Archived" is selected.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>