src/main/default/objects/Price_Book__c/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the price book is deactivated.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>