src/main/default/objects/Price_Book__c/fields/Items_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Items_Last_Modified__c</fullName>
    <inlineHelpText>Date and time the price book was last updated.</inlineHelpText>
    <label>Items Last Modified</label>
    <summarizedField>Price_Book_Item__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Price_Book_Item__c.Price_Book__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>