src/main/default/objects/Price_Book__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Office that uses the price book. If an office is not selected, the price book is available for every office.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Books (Office)</relationshipLabel>
    <relationshipName>Price_Books1</relationshipName>
    <type>Lookup</type>
</CustomField>