src/main/default/objects/Price_Book__c/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <formula>Office__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Office that uses the price book. If an office is not selected, the price book is available for every office.</inlineHelpText>
    <label>Office Name</label>
    <type>Text</type>
</CustomField>