src/main/default/objects/Price_Book__c/fields/Parent_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Parent_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent price book for the price book. When a price book has a parent, you can select items from its parent price book when building tickets.</inlineHelpText>
    <label>Parent Price Book</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>