src/main/default/objects/Price_Book__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <inlineHelpText>Business segment that uses the price book. If a business segment is not selected, the price book is available for every segment.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Segment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>