src/main/default/objects/Price_Book__c/fields/Surcharge_Rate_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Rate_Fuel__c</fullName>
    <inlineHelpText>Percentage of a ticket item's subtotal to apply as a surcharge for fuel costs when users add an item from the price book to a ticket. To apply the surcharge on a price book item, you must select "Surcharge Fuel" for the price book item.</inlineHelpText>
    <label>Surcharge Rate Fuel</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>