src/main/default/objects/Price_Book__c/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <label>--Master--</label>
</RecordType>