src/main/default/objects/Price_Book__c/validationRules/Expiration_Date_After_Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_After_Effective_Date</fullName>
    <active>true</active>
    <description>Expiration date must be greater than effective date.</description>
    <errorConditionFormula>Effective_Date__c > Expiration_Date__c</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>The Expiration Date must be greater than the Effective Date, or Expiration Date must be set to nothing.</errorMessage>
</ValidationRule>