src/main/default/objects/Price_Book__c/listViews/All_Price_Books.listView-meta.xml
<ListView>
    <fullName>All_Price_Books</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Office__c</columns>
    <columns>Segment__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Items_Last_Modified__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Books</label>
    <language>en_US</language>
</ListView>